# gateway

./: .gitignore  Cargo.toml  gateway.yaml
api/: admin.rest  custom_headers.lua  wrk.sh
src/: admin.rs  app.rs  config.rs  lb.rs  main.rs  proxy.rs  rate_limit.rs  service.rs  service_discovery.rs  store.rs
src/admin/: mod.rs  serve.rs  service.rs
src/const/: mod.rs
src/docker/: background.rs  mod.rs  servicediscovery.rs
test/: docker-compose.yml  index.html  nginx.conf
test/docker/: docker-compose.yml
test/docker-swarm/: docker-compose.yml
test/gate/: Dockerfile  build.sh  docker-compose.yml
