[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
pingora = { version = "0.4", features = ["lb"] }
async-trait = "0.1"
arc-swap = "1.7"
anyhow = "1"
futures = "0.3"
axum = { version = "0.8.1" }
